// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`parse > should work 1`] = `
{
  "audio": {
    "term": "AAC",
  },
  "episode": {
    "number": undefined,
    "numberAlt": undefined,
    "title": undefined,
  },
  "file": {
    "checksum": undefined,
    "extension": undefined,
    "name": "[Lilith-Raws] 熊熊勇闖異世界 PUNCH！ / Kuma Kuma Kuma Bear S02 - 02 [Baha][WEB-DL][1080p][AVC AAC][CHT][MP4]",
  },
  "language": undefined,
  "prefix": {
    "episode": undefined,
    "season": undefined,
    "volume": undefined,
  },
  "season": undefined,
  "subtitles": undefined,
  "title": undefined,
  "type": undefined,
  "video": {
    "resolution": "1080p",
    "term": "AVC",
  },
  "volume": {
    "number": undefined,
  },
}
`;

exports[`parse > should work 2`] = `
{
  "audio": {
    "term": "AAC",
  },
  "episode": {
    "number": undefined,
    "numberAlt": undefined,
    "title": undefined,
  },
  "file": {
    "checksum": undefined,
    "extension": undefined,
    "name": "[ANi] 機動戰士鋼彈 水星的魔女 Season 2 - 13 [1080P][Baha][WEB-DL][AAC AVC][CHT][MP4]",
  },
  "language": undefined,
  "prefix": {
    "episode": undefined,
    "season": undefined,
    "volume": undefined,
  },
  "season": undefined,
  "subtitles": undefined,
  "title": undefined,
  "type": undefined,
  "video": {
    "resolution": "1080P",
    "term": "AVC",
  },
  "volume": {
    "number": undefined,
  },
}
`;

exports[`parse > should work 3`] = `
{
  "audio": {
    "term": undefined,
  },
  "episode": {
    "number": undefined,
    "numberAlt": undefined,
    "title": undefined,
  },
  "file": {
    "checksum": undefined,
    "extension": undefined,
    "name": "[爱恋字幕社][4月新番][魔法使的新娘2][Mahoutsukai no Yome S2][01][1080P][MP4][GB][简中]",
  },
  "language": undefined,
  "prefix": {
    "episode": undefined,
    "season": undefined,
    "volume": undefined,
  },
  "season": undefined,
  "subtitles": undefined,
  "title": undefined,
  "type": undefined,
  "video": {
    "resolution": "1080P",
    "term": undefined,
  },
  "volume": {
    "number": undefined,
  },
}
`;

exports[`parse > should work 4`] = `
{
  "audio": {
    "term": undefined,
  },
  "episode": {
    "number": undefined,
    "numberAlt": undefined,
    "title": undefined,
  },
  "file": {
    "checksum": undefined,
    "extension": undefined,
    "name": "[桜都字幕组] 总之就是非常可爱 S2 / Tonikaku Kawaii S2 [01][1080p][简体内嵌]",
  },
  "language": undefined,
  "prefix": {
    "episode": undefined,
    "season": undefined,
    "volume": undefined,
  },
  "season": undefined,
  "subtitles": undefined,
  "title": undefined,
  "type": undefined,
  "video": {
    "resolution": "1080p",
    "term": undefined,
  },
  "volume": {
    "number": undefined,
  },
}
`;

exports[`parse > should work 5`] = `
{
  "audio": {
    "term": undefined,
  },
  "episode": {
    "number": undefined,
    "numberAlt": undefined,
    "title": undefined,
  },
  "file": {
    "checksum": undefined,
    "extension": undefined,
    "name": "【喵萌奶茶屋】★04月新番★[百合是我的工作！/我的百合乃工作是也！/私の百合はお仕事です！/Watashi no Yuri wa Oshigoto desu!][01][720p][繁日雙語][招募翻譯校對]",
  },
  "language": undefined,
  "prefix": {
    "episode": undefined,
    "season": undefined,
    "volume": undefined,
  },
  "season": undefined,
  "subtitles": undefined,
  "title": undefined,
  "type": undefined,
  "video": {
    "resolution": "720p",
    "term": undefined,
  },
  "volume": {
    "number": undefined,
  },
}
`;
